remove a lot of unnecessary creation of primitive wrappers